feat: add initial benchmark